--- a/Russell/App.config
+++ b/Russell/App.config
@@ -7,8 +7,8 @@
   </startup>
   <connectionStrings>
     <add name="JO" connectionString="Data Source=DAVIDTOWNSEND;Initial Catalog=JO;Integrated Security=true" />
-    <add name="Russell.Properties.Settings.JOConnectionString" connectionString="Data Source=DAVIDTOWNSEND;Initial Catalog=JO;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="Russell.Properties.Settings.JOConnectionString" connectionString="Data Source=DAVIDTOWNSEND;Initial Catalog=JO;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Joe" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Development\Russell\Data\Joe.accdb;Persist Security Info=True" providerName ="Provider=Microsoft.ACE.OLEDB.12.0" />
   </connectionStrings>
   <appSettings>
     <add key="StartupFolder" value="C:\Development\Russell" />
