--- a/Russell/App.config
+++ b/Russell/App.config
@@ -14,6 +14,6 @@
     <add key="StartupFolder" value="C:\Development\Russell" />
     <add key="AplicationName" value="Actors Relational Savings Environment (ARSE)"/>
     <add key="ApplicationVersion" value="1.0"/>
-    <add key="DBMS" value="OLE"/> <!-- Other values are: MSSQL-->
+    <add key="DBMS" value="MSSQL"/> <!-- Other values are: OLEDB-->
   </appSettings>
 </configuration>
